syntax = "proto3";

message SensorInfo {
    string unit = 1;
    string name = 2;
    string sensor = 3;
    string measurementname = 4;
    string measurementunit = 5;
    bool hidden = 6;
    string site = 7;
}

message SensorData {
    string sensor = 1;
    string reading = 2;
    string measurementname = 3;
    string measurementunit = 4;
    int64 timestamp = 5;
    string unit = 6;
    string unitName = 7;
}

message GetSensorsRequest {
    string name = 1;
    bool includeHidden = 2;
    repeated string site = 3;
}

message GetSensorReadingsRequest {
    repeated string unit = 1;
    repeated string sensor = 2;
    int64 since = 3;
    repeated string site = 4;
}

service SensorsService {
    rpc GetSensors(GetSensorsRequest) returns (stream SensorInfo);
    rpc GetSensorReadings(GetSensorReadingsRequest) returns (stream SensorData);
    rpc UpdateSensor(SensorInfo) returns (SensorInfo);
}
